# omnichain-controller

./: .env.deployment  .env.example  .gitignore  Anchor.toml  README.md  generate-wallet.js  hardhat.config.ts  layerzero.config.ts  package-lock.json  package.json  tsconfig.json
config/: networks.ts
demo-data/: collection.json  demo-proposals.json  sample-cnfts.json
frontend/: README.md  next.config.js  package.json
programs/omnichain-controller/: Cargo.toml
programs/omnichain-controller/src/: constants.rs  error.rs  lib.rs
programs/omnichain-controller/src/cpi/: mod.rs
programs/omnichain-controller/src/instructions/: init_oapp.rs  init_oapp_store.rs  initialize.rs  lz_receive.rs  lz_receive_types.rs  mod.rs  receive_message.rs  update_metadata.rs
programs/omnichain-controller/src/instructions/mass_operations/: batch_theme_update.rs  initialize_massive_collection.rs  mass_mint.rs  mod.rs  tier_promotion.rs
programs/omnichain-controller/src/state/: collection_manager.rs  controller_config.rs  message_types.rs  mod.rs  msg_codec.rs  oapp_store.rs
scripts/: check-eth-balance.sh  demo-cross-chain-localhost.js  demo-local-complete.sh  demo-localhost.sh  deploy-ethereum-localhost.js  deploy-local-complete.sh  deploy-localhost-simple.js  deploy-sepolia.js  deploy-testnet-full.sh  deploy-testnet.sh  generate-demo-accounts.sh  generate-demo-data.ts  test-deployment.ts  test-e2e-testnet.sh  verify-testnet-deployment.js
sdk/: index.ts
tests/: layerzero-comprehensive.ts  layerzero-critical-fixes.ts  omnichain-controller.ts  real-cnft-state.spec.ts
(+42 files in other folders)
